# calendar_app_rust

./: .gitignore  Cargo.toml  Dockerfile.build.ubuntu18.04  Makefile  README.md
.github/workflows/: rust.yml
calendar_app_bot/: Cargo.toml
calendar_app_bot/src/: failure_count.rs  lib.rs  telegram_bot.rs
calendar_app_http/: Cargo.toml
calendar_app_http/src/: app.rs  elements.rs  errors.rs  lib.rs  logged_user.rs  routes.rs
calendar_app_lib/: Cargo.toml
calendar_app_lib/src/: calendar.rs  calendar_cli_opts.rs  calendar_sync.rs  config.rs  datetime_wrapper.rs  latitude.rs  lib.rs  longitude.rs  models.rs  naivedate_wrapper.rs  parse_hashnyc.rs  parse_nycruns.rs  pgpool.rs  schema.rs  stack_string.rs  stdout_channel.rs  timezone.rs
gcal_lib/: Cargo.toml
gcal_lib/src/: calendar_v3_types.rs  date_time_wrapper.rs  datetimetype.rs  gcal_instance.rs  lib.rs  rate_limiter.rs
migrations/: V01__calendar_cache.sql  V02__calendar_list.sql  V04__shortened_links.sql  V05__add_indexes.sql
migrations/2020-03-16-122404_calendar_cache/: down.sql  up.sql
migrations/2020-03-16-153908_calendar_list/: down.sql  up.sql
migrations/2020-03-18-220347_authorized_users/: down.sql  up.sql
migrations/2020-03-23-113255_shortened_links/: down.sql  up.sql
scripts/: Dockerfile  backup_db.sh  bootstrap_db.sh  bootstrap_docker.sh  bootstrap_github.sh  build_deb_docker.sh  clear_db.sh  openapi.yaml  restore_db.sh
src/: calendar_app_bot.rs  calendar_app_http.rs  main.rs  test_gcal.rs
templates/: index.html  scripts.js  style.css
tests/data/: hashnyc.html  nycruns.html
