[package]
name = "calendar_app_rust"
version = "0.1.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcal_lib = {path="gcal_lib"}
calendar_app_lib = {path="calendar_app_lib"}
chrono = "0.4"
tokio = {version="0.2", features=["full"]}
anyhow = "1.0"

[workspace]
members = [
    "gcal_lib",
    "calendar_app_lib",
]

[[bin]]
name = "test-gcal"
path = "src/test_gcal.rs"
doc = false
