[package]
name = "calendar_app_rust"
version = "0.2.12"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcal_lib = {path="gcal_lib"}
calendar_app_bot = {path="calendar_app_bot"}
calendar_app_lib = {path="calendar_app_lib"}
calendar_app_http = {path="calendar_app_http"}
chrono = "0.4"
tokio = {version="0.2", features=["full"]}
anyhow = "1.0"
actix-rt = "1.1"
env_logger = "0.7"
log = "0.4"

[workspace]
members = [
    "gcal_lib",
    "calendar_app_lib",
    "calendar_app_http",
]

[[bin]]
name = "calendar-app-rust"
path = "src/main.rs"
doc = false

[[bin]]
name = "calendar-app-http"
path = "src/calendar_app_http.rs"
doc = false

[[bin]]
name = "calendar-app-bot"
path = "src/calendar_app_bot.rs"
doc = false
