[package]
name = "calendar_app_rust"
version = "0.6.15"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "calendar-app-rust"
priority = "optional"
section = "rust"
provides = "calendar-app-rust"
extended-description = """\
CLI and Web app frontend for calendar"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcal_lib = {path="gcal_lib"}
calendar_app_bot = {path="calendar_app_bot"}
calendar_app_lib = {path="calendar_app_lib"}
calendar_app_http = {path="calendar_app_http"}
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
tokio = {version="1.21", features=["full"]}
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"

[workspace]
members = [
    "gcal_lib",
    "calendar_app_lib",
    "calendar_app_http",
]

[[bin]]
name = "calendar-app-rust"
path = "src/main.rs"
doc = false

[[bin]]
name = "calendar-app-http"
path = "src/calendar_app_http.rs"
doc = false

[[bin]]
name = "calendar-app-bot"
path = "src/calendar_app_bot.rs"
doc = false
