[package]
name = "calendar_app_bot"
version = "0.7.11"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calendar_app_lib = {path="../calendar_app_lib"}
anyhow = "1.0"
futures = "0.3"
tokio = {version="1.34", features=["rt", "macros", "rt-multi-thread"]}
lazy_static = "1.4"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
arc-swap = "1.2.0"
im = "15.0"
deadqueue = "0.2"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="0.9.2" }
telegram-bot = {git = "https://github.com/ddboline/telegram-bot.git", tag="0.9.0-4", default_features=false}
