[package]
name = "calendar_app_bot"
version = "0.7.19"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
arc-swap = "1.2.0"
calendar_app_lib = {path="../calendar_app_lib"}
deadqueue = "0.2"
futures = "0.3"
im = "15.0"
once_cell = "1.0"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="0.9.3" }
telegram-bot = {git = "https://github.com/ddboline/telegram-bot.git", tag="0.9.0-4", default_features=false}
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
tokio = {version="1.37", features=["rt", "macros", "rt-multi-thread"]}
