[package]
name = "calendar_app_bot"
version = "0.9.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
arc-swap = "1.7"
calendar_app_lib = {path="../calendar_app_lib"}
deadqueue = "0.2"
futures = "0.3"
im = "15.0"
once_cell = "1.0"
stack-string = { version="1.1", features=["postgres_types"] }
telegram-bot = {git = "https://github.com/ddboline/telegram-bot.git", tag="0.9.0-4", default-features=false}
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
tokio = {version="1.43", features=["rt", "macros", "rt-multi-thread"]}
