[package]
name = "calendar_app_http"
version = "0.7.17"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.11.9"}
calendar_app_lib = {path = "../calendar_app_lib"}
derive_more = "0.99"
dioxus = "0.4"
dioxus-ssr = "0.4"
dirs = "5.0"
futures = "0.3"
gcal_lib = {path="../gcal_lib"}
itertools = "0.12"
log = "0.4"
maplit = "1.0"
parking_lot = "0.12"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.6", features=["deadpool"]}
rayon = "1.5"
reqwest = {version="0.11", default_features = false, features=["cookies", "json", "rustls-tls", "stream"]}
rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi", "chrono"], default-features=false, tag="0.15.1-1"}
rweb-helper = { git = "https://github.com/ddboline/rweb_helper.git", tag="0.5.1" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi"], tag="0.9.2" }
thiserror = "1.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.35", features=["time"]}
url = "2.3"
uuid = "1.0"

[dev-dependencies]
auth_server_http = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.11.9"}
auth_server_lib = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.11.9"}
maplit = "1.0"
