[package]
name = "calendar_app_http"
version = "0.8.3"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.12.3"}
calendar_app_lib = {path = "../calendar_app_lib"}
derive_more = {version="1.0", features=["full"]}
dioxus = "0.6"
dioxus-core = "0.6"
dioxus-ssr = "0.6"
dirs = "6.0"
futures = "0.3"
gcal_lib = {path="../gcal_lib"}
itertools = "0.14"
log = "0.4"
maplit = "1.0"
parking_lot = "0.12"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
rayon = "1.5"
reqwest = {version="0.12", default-features = false, features=["cookies", "json", "rustls-tls", "stream"]}
rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi", "chrono"], default-features=false, tag="0.15.2"}
rweb-helper = { git = "https://github.com/ddboline/rweb_helper.git", tag="0.5.3" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi"], tag="1.0.2" }
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.42", features=["time"]}
url = "2.3"
uuid = "1.0"

[dev-dependencies]
auth_server_http = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.12.3"}
auth_server_lib = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.12.3"}
maplit = "1.0"
