[package]
name = "calendar_app_lib"
version = "0.6.2"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11", default_features = false, features=["cookies", "json", "gzip", "rustls-tls"]}
anyhow = "1.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="0.5", features=["system"]}
rayon = "1.5"
tokio = {version="1.17", features=["full"]}
url = "2.2"
dirs = "4.0"
dotenv = "0.15"
derive_more = "0.99"
serde = {version="1.0", features=["derive"]}
gcal_lib = {path="../gcal_lib"}
uuid = {version="0.8", features=["v4"]}
futures = "0.3"
select = "0.5"
structopt = "0.3"
itertools = "0.10"
blake3 = {version="1.0", features=["rayon"]}
hex = "0.4"
log = "0.4"
envy = "0.4"
smallvec = "1.6"
serde_json = "1.0"
deadqueue = "0.2"
refinery = {version="0.8", features=["tokio-postgres"]}
deadpool = { version = "0.9", features=["serde", "rt_tokio_1"] }
deadpool-postgres = { version = "0.10", features=["serde"] }
tokio-postgres = {version = "0.7", features = ["with-time-0_3", "with-uuid-0_8", "with-serde_json-1"]}
postgres-types = "0.2"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.4", features=["deadpool"]}

stack-string = { version="0.7", features=["postgres_types"] }
stdout-channel = "0.5"
