[package]
name = "calendar_app_lib"
version = "0.7.22"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
blake3 = {version="1.0", features=["rayon"]}
clap = {version="4.0", features=["derive"]}
derive_more = "0.99"
deadpool = { version = "0.12", features=["serde", "rt_tokio_1"] }
deadpool-postgres = { version = "0.14", features=["serde"] }
deadqueue = "0.2"
dirs = "5.0"
dotenv = "0.15"
envy = "0.4"
futures = "0.3"
gcal_lib = {path="../gcal_lib"}
hex = "0.4"
itertools = "0.13"
log = "0.4"
postgres-types = "0.2"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
rayon = "1.5"
refinery = {version="0.8", features=["tokio-postgres"]}
reqwest = {version="0.12", default_features = false, features=["cookies", "json", "gzip", "rustls-tls"]}
select = "0.6"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
smallvec = "1.6"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="0.9.3" }
stdout-channel = "0.6"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.38", features=["rt", "macros", "rt-multi-thread"]}
tokio-postgres = {version = "0.7", features = ["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
url = "2.3"
uuid = {version="1.0", features=["v4"]}
