[package]
name = "gcal_lib"
version = "0.5.16"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-rustls = "0.23"
hyper = { version = "0.14", features = ["stream"] }
anyhow = "1.0"
retry = "1.2"
log = "0.4"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
env_logger = "0.9"
deadqueue = "0.2"
async-google-apis-common = { git = "https://github.com/ddboline/async-google-apis.git" }
tokio = {version="1.17", features=["full"]}
stack-string = { version="0.7", features=["postgres_types"] }
stdout-channel = "0.5"

[dev-dependencies]
calendar_app_lib = {path="../calendar_app_lib"}
