[package]
name = "gcal_lib"
version = "0.6.1"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-rustls = "0.23"
hyper = { version = "0.14", features = ["stream"] }
anyhow = "1.0"
retry = "1.2"
log = "0.4"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
rand = "0.8"
env_logger = "0.9"
deadqueue = "0.2"
derive_more = "0.99"
async-google-apis-common = { git = "https://github.com/ddboline/async-google-apis.git", branch="time-0.3" }
tokio = {version="1.17", features=["full"]}
stack-string = { version="0.7", features=["postgres_types"] }
stdout-channel = "0.5"
bytes = "1.1"
postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-0_8", "with-serde_json-1", "derive"]}

[dev-dependencies]
calendar_app_lib = {path="../calendar_app_lib"}
