[package]
name = "gcal_lib"
version = "0.8.1"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-google-apis-common = { git = "https://github.com/ddboline/async-google-apis.git", branch="time-0.3" }
bytes = "1.1"
deadqueue = "0.2"
derive_more = {version="1.0", features=["full"]}
log = "0.4"
postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1", "derive"]}
rand = "0.8"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="1.0.2" }
stdout-channel = "0.6"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
tokio = {version="1.38", features=["rt", "macros", "rt-multi-thread"]}

[dev-dependencies]
calendar_app_lib = {path="../calendar_app_lib"}
